# 2425II_INT6017_CS2_group_project

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  modern_sa.sql  pyproject.toml
gateway_service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
gateway_service/main/: _app.py  _config.py  _rabbit.py  _redis.py  enums.py
gateway_service/main/controllers/: _router.py  image.py  items.py  presigned_url.py  probe.py
gateway_service/main/libs/: image_lib.py
gateway_service/main/middlewares/: access_log.py
gateway_service/main/models/: __init__.py  base.py  image_cache.py  retry_job.py  text_cache.py  translation_cache.py
gateway_service/scripts/: system_as_is_script.py
main/: _config.py  _db.py
main/commons/: error_handlers.py  exceptions.py
main/controllers/: image.py  items.py
main/middlewares/: db.py
main/misc/: error_handlers.py
main/services/: ocr_service.py
migrations/versions/: 202305222002-df8e6b5e1bc9_.py
ocr_service/: Dockerfile  Makefile  pyproject.toml  run.py
ocr_service/main/: __init__.py  _app.py  _config.py  _db.py  _rabbit.py  enums.py  run.py
pdf_service/: Dockerfile  pyproject.toml
pdf_service/main/: _app.py  _config.py  _db.py  run.py
pdf_service/main/controllers/: image.py
pdf_service/main/models/: __init__.py  retry_job.py
pdf_service/main/schemas/: message.py
pdf_service/main/services/: gcp_service.py  pdf_service.py
tests/: conftest.py
translation_service/: .dockerignore  Dockerfile  Makefile  pyproject.toml  run.py
translation_service/main/: _config.py  run.py
(+25 files in other folders)
