[tool.poetry]
name = "2425II_INT6017_CS2_group_project"
version = "0.1.0"
description = ""
authors = ["phucpb <Phambaodu25072001@gmail.com>"]
#readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = { version = "^2.0.30", extras = ["asyncio"] }
aiomysql = "^0.2.0"
alembic = "^1.13.1"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.28.1"
PyJWT = "2.10.1"
sentry-sdk = {extras = ["fastapi"], version = "2.20.0"}
APScheduler = "3.11.0"
cryptography = "44.0.0"
google-cloud-storage = "3.0.0"
reportlab = "4.3.1"
aio-pika = "9.5.5"
redis = "5.2.1"
gcloud-aio-storage = "9.4.0"
aiohttp = "3.11.18"
pusher = "3.3.3"

[tool.poetry.group.dev.dependencies]
asgiref = "^3.8.1"
coverage = "^7.5.1"
httpx = "^0.27.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.21.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"